--- a/ManageDSK/.gitignore
+++ b/ManageDSK/.gitignore
@@ -1,4 +1,5 @@
 # Ignore all files and subdirectories in this directory
 *
 # But don't ignore these files:
-!BlankDSK/blank.dsk
+!ManageDSK.cmd
+!ManageDSK.ps1
