--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,7 +22,7 @@
             // change "isDefault" to false if you want to disable it
             "label": "Build Windows PowerShell",
             "type": "shell",
-            "command": ".${/}ps1${/}Start-build.ps1",
+            "command": ".${/}ps1${/}Start-cpcBuild.ps1",
             "args": ["${cwd}", "${workspaceFolderBasename}", "${fileDirnameBasename}", "${fileBasename}", "${fileBasenameNoExtension}", "${fileExtname}"],
             "dependsOn": [],
             "problemMatcher": [],
